--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,94 @@
+@import "app/shared/styles/style-variables.scss";
+
+@import url(~@angular/material/prebuilt-themes/indigo-pink.css);
+
+
 /* You can add global styles to this file, and also import other style files */
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+.flex {
+  display: flex;
+  &.direct-col {
+    flex-direction: column;
+  }
+  &.between {
+    justify-content: space-between;
+  }
+  &.around {
+    justify-content: space-around;
+  }
+  &.left {
+    justify-content: left;
+  }
+  &.start {
+    justify-content: flex-start;
+  }
+  &.end {
+    justify-content: flex-end;
+  }
+  &.center {
+    justify-content: center;
+  }
+  &.align-center{
+    align-items: center;
+  }
+  &.align-end {
+    align-items: end;
+  }
+  &.align-flex-end {
+    align-items: flex-end;
+  }
+  &.align-stretch{
+    align-items: stretch;
+  }
+  &.wrap{
+    flex-wrap: wrap;
+  }
+
+  // material dialog styles
+
+  .popup-modal .mat-dialog-container {
+    padding: 0;
+    border-radius: 20px;
+  }
+}
