--- a/src/app/users/users.component.scss
+++ b/src/app/users/users.component.scss
@@ -1,28 +1,74 @@
 @import "../shared/styles/style-variables";
 
 .users-container {
-  width: 70%;
-  border: 2px solid purple;
-  border-radius: 15px;
-  margin: 0 auto;
-  background-color: $whiteColor;
-  padding: 30px 0;
-
   .title {
-    font-size: 24px;
+    font-size: 26px;
     font-family: $mainFont;
     text-align: center;
     color: purple;
     text-decoration: underline;
-    margin-bottom: 20px;
+    padding: 25px;
   }
 
-  .pagination {
-    height: 40px;
+  .filter-block {
+    width: 70%;
+    margin: 0 auto;
+
+    .input-block {
+      width: 200px;
+      margin: 0 30px;
+    }
+
+    .sort-btn {
+      margin: 0 30px;
+      text-transform: uppercase;
+      width: 75px;
+      height: 25px;
+      background-color: #FFFFFF;
+      color: $textColor;
+      border-radius: 20px;
+      cursor: pointer;
+      outline: none;
+
+      &:hover {
+        background-color: purple;
+      }
+      &:active {
+        background-color: #FFFFFF;
+      }
+      &.active {
+        background-color: purple;
+      }
+    }
+  }
+
+  .list-container {
+    width: 70%;
+    border: 2px solid purple;
+    border-radius: 15px;
+    margin: 0 auto;
+    background-color: $whiteColor;
+    padding: 30px 0;
+
+
+    .pagination {
+      margin-top: 20px;
+    }
   }
 
   .add-btn {
     width: 200px;
-    margin:40px;
+    height: 50px;
+    margin: 40px;
+    text-transform: uppercase;
+
+    &:hover {
+      color: #f4f4f4;
+      background-color: blue;
+    }
   }
+}
+
+mat-form-field {
+  width: 100%;
 }
