--- a/src/app/users/user-info/user-info.component.scss
+++ b/src/app/users/user-info/user-info.component.scss
@@ -16,6 +16,7 @@
       margin-right: 20px;
       font-family: $mainFont;
       font-size: 18px;
+      text-transform: capitalize;
     }
 
     .text {
